tests/ui/binop/binop-typeck.stderr
error[E0369]: cannot add `{integer}` to `bool`
  --> $DIR/binop-typeck.rs:6:15
   |
LL |     let z = x + y;
   |             - ^ - {integer}
   |             |
   |             bool

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0369`.
